Mon Jan  2 18:02:20 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Bug fix to the patch of 28/12 for versions of curl
  				that don't support curl_easy_strerror()

Mon Jan  2 17:38:35 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	NEW_WORLD code (not enabled by default) now finds all
  				malware in my database and is now ready for
				testing

Wed Dec 28 13:49:46 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Added patches by Gianluigi Tiesi <sherpya*netfarm.it>
  				Improve CURL support on Windows
				Improve CURL error message for systems without
					CURL_ERRORBUFFER

Thu Dec 15 20:51:27 CET 2005 (tk)
---------------------------------
  * libclamav/sis.c: use mmap() when available

Thu Dec 15 02:52:01 CET 2005 (tk)
---------------------------------
  * libclamav/sis.[ch]: new files
  * libclamav: inital support for SIS files (Symbian OS packages)

Mon Dec 12 19:34:00 CET 2005 (tk)
---------------------------------
  * libclamav: add support for CL_SCAN_ALGO (to control algorithmic detection)
	       Requested by Tomasz Papszun
  * clamscan: --no-algo
  * clamd: ScanAlgo

Sat Dec 10 19:45:48 CET 2005 (tk)
---------------------------------
  * fix some compiler warnings, patch by Stefan Huehner <stefan*huehner.org>

Tue Nov 29 16:31:23 GMT 2005 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c unrarvm.c: #include clamav-config.h

Mon Nov 28 20:45:20 CET 2005 (tk)
---------------------------------
  * configure.in: check for hardware acceleration library (--disable-hwaccel
		  disables the check)

Sat Nov 26 23:32:35 CET 2005 (tk)
---------------------------------
  * libclamav/pe.[ch]: add support for PE32+ executables (used on win64)

Wed Nov 23 11:20:54 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Multipart headers: handle end of header lines that are
				not empty

Tue Nov 22 12:45:35 CET 2005 (tk)
---------------------------------